# rdkb-wifi-hal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile.am  NOTICE  Tr69_Tlv.h  bridge_util_hal.h  bt_hal.h  build_hts.sh  build_ut.sh  ccsp_hal_dhcpv4_emu_api.h  ccsp_hal_emmc.h  ccsp_hal_ethsw.h  cm_hal.h  configure.ac  dhcp4cApi.h  dhcp6cApi.h  dhcpsnooper.h  dhcpv4c_api.h  dpoe_hal.h  fwupgrade_hal.h  hal_firewall.h  hotspotfd.h  moca_hal.h  mso_mgmt_hal.h  mta_hal.h  nfc_hal.h  platform_hal.h  uipc.h  vlan_eth_hal.h  vlan_hal.h  vlan_hal_emu.h  voice_hal.h  wan_hal.h  wifi_hal.h  wifi_hal_ap.h  wifi_hal_client_mgt.h  wifi_hal_deprecated.h  wifi_hal_emu.h  wifi_hal_generic.h  (+5 more)
docs/: .gitignore  Doxyfile.cfg  DoxygenLayout.xml  Makefile  generate_docs.sh  header.html
docs/graphs/: state_example.mmd
docs/pages/: halSpec.md  halUnitTesting.md  halspec.md  rdkbWifiStack.md  rdkbWifiStackGwPodConfigMgmt.md  rdkbWifiStackWebConfig.md  testingSpecification.md
include/: log.txt  wifi_hal.h  wifi_hal_ap.h  wifi_hal_client_mgt.h  wifi_hal_extender.h  wifi_hal_generic.h  wifi_hal_radio.h  wifi_hal_sta.h  wifi_hal_telemetry.h
stubs/: Makefile
stubs/src/: main.c  wifi_hal_ap.c  wifi_hal_client_mgt.c  wifi_hal_extender.c  wifi_hal_generic.c  wifi_hal_radio.c  wifi_hal_sta.c  wifi_hal_telemetry.c
