##########################################################################
# If not stated otherwise in this file or this component's Licenses.txt
# file the following copyright and licenses apply:
#
# Copyright 2016 RDK Management
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##########################################################################
SUBDIRS = 
DIST_SUBDIRS = 
EXTRA_DIST = ccsp_hal_dhcpv4_emu_api.h  \
             cm_hal.h \
             dhcp6cApi.h \
             dhcpv4c_api.h \
             mso_mgmt_hal.h \
             platform_hal.h \
             vlan_hal.h \
             voice_hal.h \
             wifi_hal.h \
             ccsp_hal_ethsw.h \
             dhcp4cApi.h \
             hal_firewall.h \
             moca_hal.h \
             mta_hal.h \
             Tr69_Tlv.h \
             wifi_hal_emu.h \
             dpoe_hal.h \
             bt_hal.h \
             wan_hal.h

otherincludedir = $(includedir)/ccsp
otherinclude_HEADERS = $(EXTRA_DIST)
